mssh (1.2-3) UNRELEASED; urgency=low

  * Fix lintian warning debian-rules-missing-recommended-target
  * Switch to source format "3.0 (quilt)"

 -- Axel Beckert <abe@debian.org>  Tue, 01 Jan 2013 16:00:00 +0100

mssh (1.2-2) unstable; urgency=low

  * QA upload
  * Set Maintainer to QA Group (O: #674885)
  * Set Vcs-Header to collab-maint repository (Closes: #626594)
  * Leave original Vcs-Headers with updated URLs as comments

 -- Axel Beckert <abe@debian.org>  Sat, 29 Dec 2012 23:05:22 +0100

mssh (1.2-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "FTBFS: mssh-terminal.c:49:5: error: 'vte_terminal_fork_command'
    is deprecated (declared at /usr/include/vte-
    0.0/vte/vtedeprecated.h:82) [-Werror=deprecated-declarations]":
    apply patch from Ubuntu / Michael Vogt:
    - fix ftbfs (LP: #756105)
    (use vte_terminal_fork_command_full instead of the deprecated
    vte_terminal_fork_command in src/mssh-terminal.c)
    (Closes: #634426)

 -- gregor herrmann <gregoa@debian.org>  Wed, 02 Nov 2011 19:32:56 +0100

mssh (1.2-1) unstable; urgency=low

  * New upstream release.
    - Setup set_word_chars on VTE termianls properly. Closes: #565237.
    - Correct terminal focus when a session closes. Closes: #565336.
    - Add keyboard shortcuts for changing session focus. Closes: #565337.
    - Add option to override column count. Closes: #565338.
  * Thanks to Chris Lamb <lamby@debian.org> for above suggestions.

 -- Bradley Smith <bradsmith@debian.org>  Fri, 15 Jan 2010 22:23:37 +0000

mssh (1.1-1) unstable; urgency=low

  * New upstream release.
    - Implement usage of aliases from config file. Closes: #544939.

 -- Bradley Smith <bradsmith@debian.org>  Sat, 05 Sep 2009 16:30:14 +0100

mssh (1.0-1) unstable; urgency=low

  * New upstream release. Closes: #543658, #543625, #543624.
  * Update build-depends.

 -- Bradley Smith <bradsmith@debian.org>  Wed, 02 Sep 2009 21:13:26 +0100

mssh (0.2-1) unstable; urgency=low
