@@ -2,7 +2,7 @@ Source: mssh
 Section: admin
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper (>= 7), libgtk2.0-dev, libvte-dev, libgconf2-dev
+Build-Depends: debhelper (>= 9~), libgtk2.0-dev, libvte-dev, libgconf2-dev
 Standards-Version: 3.8.3
 Homepage: http://brad-smith.co.uk/
 Vcs-Git: git://anonscm.debian.org/collab-maint/pkg-mssh.git
