@@ -1,2 +1,0 @@
-usr/bin/mssh
-usr/share/gconf/schemas/mssh.schemas
