@@ -1,6 +1,8 @@
 mssh (1.2-3) UNRELEASED; urgency=low
 
-  * Fix lintian warning debian-rules-missing-recommended-target
+  * Switch to dh7 style debian/rules
+    - Bump debhelper compatibility to 9, update debhelper build dependency
+    - Fixes lintian warning debian-rules-missing-recommended-target
   * Switch to source format "3.0 (quilt)"
 
  -- Axel Beckert <abe@debian.org>  Tue, 01 Jan 2013 16:00:00 +0100
